feat: get all auction & raffle with project query
